# SPG

./: .gitignore  LICENSE  README.md  evaluate_spg.py  main.py  multiple_versions.py  pyproject.toml  requirements.txt
conf/: config.yaml
lib/: common_torch.py  env_wrappers.py  spg_torch.py
ptan/: agent.py  experience.py
ptan/common/: __init__.py
