[project]
name = "spg"
version = "0.2.0"
description = "Sample Policy Gradient"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
