[project]
name = "spg"
version = "0.3.0"
description = "Sample Policy Gradient Regularised"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]>=1.2.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.3",
]